[package]
name = "bareiss"
version = "0.1.0"
authors = ["Lukas Abfalterer <labfalterer@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/teuron/bareiss"
description = """
Calculates the determinant of an integer square matrix
"""
keywords = ["determinant", "matrix"]
categories = ["algorithms"]

[dependencies]
